force-app/main/default/objects/cgc_sync__Sync_Client_App_Profile_Mapping__c/cgc_sync__Sync_Client_App_Profile_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Links a specific User/Role/Profile Id to a specific ClientAppProfile.
        ClientAppProfile can be seen as a child of a given ClientAppId and is represented in the form of a suffix to the latter:
        ${ClientAppId}.${ClientAppProfile}
        ExampleMobileApp.SalesAppProfile
        ExampleMobileApp.AdminAppProfile</description>
    <label>Mobile App Profile Mappings</label>
</CustomObject>