force-app/main/default/objects/cgc_sync__Sync_Client_App_Profile_Mapping__c/fields/cgc_sync__Business_Area_Name__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Business_Area_Name__c</fullName>
    <label>Business Area Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>