force-app/main/default/objects/cgc_sync__Sync_Client_App_Profile_Mapping__c/fields/cgc_sync__Client_App_ID__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Client_App_ID__c</fullName>
    <description>The parent Client App Id for the Client App Profile of this record.</description>
    <inlineHelpText>The parent Client App Id for the Client App Profile of this record.</inlineHelpText>
    <label>Client App Id</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>