force-app/main/default/objects/cgc_sync__Sync_Client_App_Profile_Mapping__c/fields/cgc_sync__Client_App_Profile__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Client_App_Profile__c</fullName>
    <description>The name of the Client App Profile</description>
    <inlineHelpText>The name of the Client App Profile</inlineHelpText>
    <label>Client App Profile</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>