force-app/main/default/objects/cgc_sync__Sync_Client_App_Profile_Mapping__c/fields/cgc_sync__Mapped_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Mapped_Record_Id__c</fullName>
    <description>The unique Salesforce identifier of a user/profile/role. Please note: If you migrate this from one Salesforce organisation to another, the IDs most probably will become obsolete, with the exception of having them defined based on a full-copy sandbox that only has data pulled from production.</description>
    <externalId>true</externalId>
    <inlineHelpText>The unique Salesforce identifier of a user/role/profile.</inlineHelpText>
    <label>Mapped Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>